test/kustomize/pet-clinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-clinic
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: pet-clinic
  template:
    metadata:
      labels:
        app: pet-clinic
    spec:
      containers:
        - name: demo
          image: quay.io/mcombi/pet-clinic
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
