test/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-clinic-service
  labels:
    app: pet-clinic
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      name: server
  selector:
    app: orders
  type: LoadBalancer
